<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name=".login_activity"
    tools:context=".LoginActivity"
    android:background="#3B5998">

    <WebView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/FBPage"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:name=".login_activity"
        tools:context=".LoginActivity"
        android:background="#3B5998">

         <ImageView
              android:id="@+id/Iv1"
              android:layout_width="45dp"
              android:layout_height="45dp"
              android:layout_centerInParent="true"
              android:src="@mipmap/logo"/>

          <LinearLayout
              android:id="@+id/linearLayout1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingTop="50dp"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_centerInParent="true"
              android:weightSum="1">

          <EditText
              android:id="@+id/email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#ffffff"
              android:textColorHint="#ADB4C3"
              android:layout_marginBottom="5dp"
              android:hint="@string/HintID"
              android:textCursorDrawable="@drawable/cursor"
              android:backgroundTint="#ffffff"
              android:maxLines="1"
              android:textColorHighlight="#5890FF"
              android:inputType="textEmailAddress">
          </EditText>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
                 <EditText
                     android:id="@+id/pass"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
                     android:textColorHint="#ADB4C3"
                     android:hint="@string/HintPASS"
                     android:textCursorDrawable="@drawable/cursor"
                     android:backgroundTint="#ffffff"
                     android:maxLines="1"
                     android:textColorHighlight="#5890FF"
                     android:inputType="textPassword">
                 </EditText>
                 <TextView
                     android:id="@+id/show"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Show"
                     android:textStyle="bold"
                     android:textColor="#ffffff"
                     android:layout_alignParentRight="true"
                     android:clickable="true"
                     android:paddingTop="17dp"
                     android:textSize="12dp"
                     android:paddingRight="10dp"/>
          </RelativeLayout>
          <Button
              android:layout_width="fill_parent"
              android:layout_height="40dp"
              android:id="@+id/login"
              android:text="@string/Login"
              android:stateListAnimator="@null"
              android:textColor="#ffffff"
              android:background="@drawable/login"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp" />
            </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgot"
        android:textColor="#ffffff"
        android:clickable="true"
        android:id="@+id/forgot"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="250dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:id="@+id/create"
        android:text="@string/Create"
        android:stateListAnimator="@null"
        android:textColor="#ffffff"
        android:background="@drawable/create"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    </RelativeLayout>
</RelativeLayout>